[package]
name = "riff"
version = "0.1.0"
authors = ["YusofBandar <ybandar1902@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
num-traits = "0.2"
structopt = { version = "0.2", default-features = false }

[lib]
name = "riff"
path = "src/lib.rs"
